main.css
:root {
  --ruler-color: #74E785;
  --project-background: white;
  --selection-color: #24DC43;
  --hover-color: #6282F0;
  --selection-text-color: var(--font-color);
  --selection-background-color: rgba(36, 220, 67, 0.65);
}

html {
  overflow-x: hidden;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
  overscroll-behavior: none;
}

body {
  margin: 0;
  min-height: 100vh;
  background: var(--back-color);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: transparent;
  letter-spacing: -0.2pt;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
}

h1, h2, h3, ul, li, a {
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: inherit;
}

img,
svg {
  display: block;
  max-width: 100%;
}

.preloader {
  position: fixed;
  z-index: 9;
  width: 100% !important;
  height: 100% !important;
  background-color: var(--font-color);
  cursor: wait;
}

::selection {
  background-color: var(--selection-background-color);
  color: var(--selection-text-color);
}

.trim {
  --units-per-em: 1000;
  --ascent: 775;
  --descent: -255;
  --CH: 708;
  --XH: 491;
}

p, a {
  position: relative;
  display: block;
  margin-top: calc(var(--top-offset) * -1);
  margin-bottom: calc(var(--bottom-offset) * -1);
  margin-left: calc(var(--I) * -1);
  line-height: var(--line-height);
  font-size: var(--font-size);
  --line-height-gap: calc((var(--line-height) - var(--font-size)) / 2);
  --top-offset: calc(var(--line-height-gap) + var(--top-align));
  --bottom-offset: calc(var(--line-height-gap) + var(--bottom-align));
  --glyph-height: calc(var(--line-height) - var(--top-offset) - var(--bottom-offset));
}

.line {
  position: absolute;
  top: var(--top-offset);
  width: 100%;
  height: 1px;
  background-color: red
}

.dimentions {
  --line-height-gap: calc((var(--line-height) - var(--font-size)) / 2);
  --top-offset: calc(var(--line-height-gap) + var(--top-align));
  --bottom-offset: calc(var(--line-height-gap) + var(--bottom-align));
  --glyph-height: calc(var(--line-height) - var(--top-offset) - var(--bottom-offset));
}

.block-trim {
  margin-top: var(--block-top-offset);
  margin-bottom: var(--block-bottom-offset);
  --line-height-gap: calc((var(--line-height) - var(--font-size)) / 2);
  --top-offset: calc(var(--line-height-gap) + var(--top-align));
  --bottom-offset: calc(var(--line-height-gap) + var(--bottom-align));
  --glyph-height: calc(var(--line-height) - var(--top-offset) - var(--bottom-offset));
}

.header {
  position: sticky;
  z-index: 1;
  /* margin: auto; */
  /* width: 82vw; */
  height: 14.6vh;
  color: var(--font-color);
  font-size: 24px;
  font-family: "Arial Narrow", sans-serif-condensed, sans-serif;
}

.header__menu {
  display: flex;
  column-gap: 3.1vw;
  
  padding-top: calc(5.6vh + (24px * -0.4));
  padding-right: 9vw;
  padding-left: 9vw;
  /* flex-wrap: wrap; */
  /* questionable */
  /* row-gap: 1vh; */
  overflow-x: auto;
  scrollbar-width: none;
}

.header__menu::-webkit-scrollbar {
  display: none;
}

.header__menu > p {
  flex-shrink: 0;
}

.header__links-list {
  display: flex;
  column-gap: 3.1vw;
}

.links-list__item {
  flex-grow: 1;
  list-style: none;
}

.item__link {
  z-index: 0;
  fill: var(--font-color);
  color: inherit;
}

/* takes no effect, but to be sure */
.mytime {
  font-variant-numeric: tabular-nums;
  -moz-font-feature-settings: "tnum";
  -ms-font-feature-settings: "tnum";
  -webkit-font-feature-settings: "tnum";
  font-feature-settings: "tnum";
}

/* @media screen and (max-width: 400px) {
  .current-city,
  .mytime {
    display: none;
  }
}

@media screen and (max-width: 675px) and (orientation: landscape) {
  .current-city,
  .mytime {
    display: none;
  }
} */

.body-text {
  color: var(--font-color);
  font-size: var(--font-size);
  font-family: 'New Spirit', serif;
  --font-size: 48px;
  /* for correct calculations should have an units */
  --module: 9vh + 1px;
  --line-height: calc(
    var(--font-size) +
    (var(--module) -
    (
      (
        var(--font-size) -
        var(--XH)
      ) + (
        var(--font-size) -
        var(--B)
      )
    )
  )
);
  --top-align: var(--XH);
  --bottom-align: var(--B);
}
.content {
  display: grid;
  gap: 9vh;
  margin-left: 9vw;
  padding-bottom: calc(5.6vh + env(safe-area-inset-bottom));
  width: 82vw;
}

#resize-value {
  position: fixed;
  right: 3.4vw;
  bottom: 5.6vh;
  z-index: 1;
  text-align: right;
}

.visually-hidden {
  position: absolute;
  margin: 0;
  padding: 0;
  width: 1px;
  height: 0;
  overflow: hidden;
  border: 0;
  clip: rect(0 0 0 0);
  white-space: nowrap;
}

.about {
  max-width: 100%;
  height: auto;
}

.intro {

}
.intro a { 
  display: inline-block;
  margin-right: 0; 
  margin-left: 0;
}

.intro span,
.intro a {
  color: #24DC43;
}

/* .background__rect { */
/* position: fixed; */
/* z-index: 0; */
/* width: 100%; */
/* } */

/* .background { */
/* z-index: 0; */
/* } */

/* #f { */
/* height: 23.6vh; */
/* background: var(--f-color); */
/* } */

/* #t { */
/* bottom: 0 !important; */
/* height: 23.6vh; */
/* background: var(--t-color); */
/* } */

.display {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2.1vw;
  --margin: calc((9vw - 5.6vw) * -1);
  margin-right: var(--margin);
  margin-left: var(--margin);
}

.webgl {
  width: 100% !important;
  height: auto !important;
}

.display__project {
  width: 100% !important;
  height: 52.8vh !important;
  background-color: hsl(0, 0%, 95%);
  cursor: grab;
}

.blurred {
  filter: blur(8px);
  transition: filter 3s;
}

.links {
  display: grid;
  row-gap: calc(14.6vh - 5.6vh - var(--glyph-height));
  --block-top-offset: var(--top-offset);
  --block-bottom-offset: 0;

}

.links__link {
  display: block;
  margin: 0;
  padding: 0;
  width: fit-content;
  height: fit-content;
}

.links__link a,
.links__link-text {
  color: inherit;
  text-decoration-color: var(--font-color);
  text-underline-offset: calc(5.6vh - 3.5vh);
  text-decoration-thickness: 1px;
  transition: text-decoration 0.01s linear;
}

.links__link-text:focus-visible,
.links__link-text:hover,
.item__link:focus-visible,
.item__link:hover {
  outline: none;
  transition: color 0.01s linear;
  transition: text-decoration 0.01s linear;
  animation: blink 0.5s infinite;
}

@keyframes blink {
  0%,
  49%,
  to {
    opacity: 1
  }
  50%,
  99% {
    opacity: 0
  }
}

#resize-container {
  position: absolute;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  scroll-behavior: auto;
}

/* #resize-container.show { */
/* display: block; */
/* } */

.toggle-grid {
  display: block;
  cursor: help;
}

/* #resize-value-hide { */
/* display: none; */
/* } */

.hover-reveal,
.hover-reveal__inner,
.hover-reveal__img {
  display: block;
}

.hover-reveal {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1 !important;
  width: 432px;
  height: 270px;
  pointer-events: none;
  opacity: 0;
}

.hover-reveal__inner {
  z-index: 1 !important;
  overflow: hidden;
}

.hover-reveal__inner,
.hover-reveal__img {
  position: relative;
  z-index: 1 !important;
  width: 100%;
  height: 100%;
}

.hover-reveal__img {
  background-position: 50% 50%;
  background-size: cover;
}

/* grid */

.grid-line-l,
.grid-line-r,
.grid-line-t,
.grid-line-b {
  position: fixed;
  z-index: -1;
  width: 1px;
  height: 125%;
  background-color: var(--ruler-color);
  opacity: 1.0;
}
.grid-line-t,
.grid-line-b {
  width: 100%;
  height: 1px;
}

/* .grid.hidden { */
/* transform: scale(0.01); */
/* } */

#grid-line-l-0 {
  top: 0px;
  left: 61.8vw;
}

#grid-line-l-1 {
  top: 0px;
  left: 38.2vw;
}

#grid-line-l-2 {
  top: 0px;
  left: 23.6vw;
}

#grid-line-l-3 {
  top: 0px;
  left: 14.6vw;
}

#grid-line-l-4 {
  top: 0px;
  left: 9vw;
}

#grid-line-l-5 {
  top: 0px;
  left: 5.6vw;
}

#grid-line-l-6 {
  top: 0px;
  left: 3.5vw;
}

#grid-line-l-7 {
  top: 0px;
  left: 2.1vw;
}

#grid-line-r-2 {
  top: 0px;
  right: 23.6vw;
}

#grid-line-r-3 {
  top: 0px;
  right: 14.6vw;
}

#grid-line-r-4 {
  top: 0px;
  right: 9vw;
}

#grid-line-r-5 {
  top: 0px;
  right: 5.6vw;
}

#grid-line-r-6 {
  top: 0px;
  right: 3.5vw;
}

#grid-line-r-7 {
  top: 0px;
  right: 2.1vw;
}

#grid-line-t-0 {
  top: 61.8vh;
}

#grid-line-t-1 {
  top: 38.2vh;
}

#grid-line-t-2 {
  top: 23.6vh;
}

#grid-line-t-3 {
  top: 14.6vh;
}

#grid-line-t-4 {
  top: 9vh;
}

#grid-line-t-5 {
  top: 5.6vh;
}

#grid-line-t-6 {
  top: 3.5vh;
}

#grid-line-t-7 {
  top: 2.1vh;
}

#grid-line-b-0 {
  bottom: 61.8vh;
}

#grid-line-b-1 {
  bottom: 38.1vh;
}

#grid-line-b-2 {
  bottom: 23.6vh;
}

#grid-line-b-3 {
  bottom: 14.6vh;
}

#grid-line-b-4 {
  bottom: 9vh;
}

#grid-line-b-5 {
  bottom: 5.6vh;
}

#grid-line-b-6 {
  bottom: 3.5vh;
}

#grid-line-b-7 {
  bottom: 2.1vh;
}

@media (max-width: 450px) {
  .body-text {
    --font-size: 36px;
  }
  .display {
    grid-template-columns: 1fr;
  }
}

@media (max-height: 600px) and (orientation: landscape) {
  .body-text {
    --font-size: 36px;
    --line-height: max(var(--module), 0.75em);
  }
  .links {
    row-gap: calc(23.6vh - 5.6vh - var(--glyph-height) * 2)
  }
}


/*# sourceMappingURL=main.css.map*/

